--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,61 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap');
+
+@keyframes show {
+    from { transform: translateY(25%); opacity: 0; filter: blur(3px); }
+    75% { opacity: 1; }
+    to { transform: translateY(0); }
+}
+
 body {
+    background-color: black;
+    height: 100vh;
+    margin: 0;
+    display: grid;
+    place-items: center;
+}
+
+#vd-bg {
+    opacity: 0;
+    position: fixed;
+    z-index: -1;
+    aspect-ratio: 16 / 9;
+    width: 100%;
     height: 100%;
+}
+
+h1, h2 {
+    color: white;
+    font-family: 'Roboto Slab';
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
+
+.wrapper {
+    display: grid;
+    place-items: center;   
+    animation: show;
+    animation-duration: 3s;
+}
+
+h1 {
+    text-align: center;
+    font-size: 1.6rem;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 4px;
+    padding: 2rem;
+}
+
+h2 {
+    text-align: justify;
+    font-size: 12px;
+}
+
+img {
+    position: fixed;
+    top: 50%;
+    z-index: -1;
+    height: 100%;
+    opacity: 30%;
+    filter: blur(2px) grayscale();
+    aspect-ratio: 1 / 1;
 }
